--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body.afbeelding {
     color: white;
 }
 
-.zoeklijst {
+.dierenlijst {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -85,7 +85,7 @@ body.afbeelding {
 }
 
 /* Zoekplaat */
-#zoekplaat {
+#zoekAfbeelding {
     position: relative;
     display: flex;
     justify-content: center;
@@ -93,7 +93,7 @@ body.afbeelding {
     width: 60vw;
 }
 
-#zoekplaat-img {
+#zoekAfbeeldingImg {
     width: 100%;
     height: auto;
 }
@@ -104,7 +104,7 @@ li.found img {
 }
 
 /* Rode cirkel */
-.marker {
+.rodeCirkel {
     position: absolute;
     width: 30px;
     height: 30px;
